css: fix default black text to turn white when entering dark mode

--- a/src/components/Nav/LeftHand/LeftHandNav.module.css
+++ b/src/components/Nav/LeftHand/LeftHandNav.module.css
@@ -47,24 +47,7 @@
   flex-direction: column;
   /* Adjust this value to match the sidebar width */
   flex-grow: 1;
-  padding: 24px 8px;
-  top: 75px;
-  background-color: #fff;
-
-  margin-left: 275px;
-  /* Add padding to keep content away from sidebar */
-  width: calc(100% - 275px);
-  /* Adjust the width to fill remaining space */
-}
-.mainContent {
-  position: relative;
-  /* Ensure main content can scroll if needed */
-  overflow: auto;
-  border-collapse: collapse;
-  flex-direction: column;
-  /* Adjust this value to match the sidebar width */
-  flex-grow: 1;
-  padding: 24px 8px;
+  padding: 8px 16px;
   top: 75px;
   background-color: #fff;
 
@@ -91,6 +74,7 @@
     margin-right: 0;
     display: flex;
     position: relative;
+    padding: 24px 16px;
     width: 100%;
     height: 100%;
     top: 193px;
